apps/base/nextcloud/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  tls:
    secretName: nextcloud-tls
  routes:
    - match: Host(`nextcloud.wc`)
      kind: Rule
      services:
        - name: nextcloud-service
          port: 80
